@@ -1,3 +1,8 @@
+2015-02-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR gcov-profile/64634
+	* g++.dg/gcov/gcov-15.C: New test.
+
 2015-02-18  Tom de Vries  <tom@codesourcery.com>
 
 	* gfortran.dg/coarray_35a.f90: Add missing cleanup-modules.
