@@ -1,3 +1,12 @@
+2015-02-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR gcov-profile/64634
+	* tree-eh.c (frob_into_branch_around): Fix up typos
+	in function comment.
+	(lower_catch): Put eh_seq resulting from EH lowering of
+	the cleanup sequence after the cleanup rather than before
+	it.
+
 2015-02-18  Tom de Vries  <tom@codesourcery.com>
 
 	* common.opt (fstdarg-opt): New option.
